# fiction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  schema.yml  tags
.github/workflows/: create-image.yml
books/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py
books/serializers/: __init__.py  book_serializers.py  page.py
fiction/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
users/: apps.py  models.py  tests.py  urls.py  views.py
users/management/commands/: creategroups.py
users/migrations/: 0001_initial.py
users/serializers/: __init__.py  group.py  user.py
