[project]
name = "fiction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.1.7",
    "django-filter>=25.1",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt[crypto]>=5.5.0",
    "drf-spectacular>=0.28.0",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "pylint>=3.3.5",
    "mypy>=1.15.0",
    "django-stubs[compatible-mypy]>=5.1.3",
]

[tool.mypy]
plugins = ["django-stubs"]
