[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fiction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.1.7",
    "django-extensions>=3.2.3",
    "django-filter>=25.1",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt[crypto]>=5.5.0",
    "drf-spectacular>=0.28.0",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "pylint>=3.3.5",
    "mypy>=1.15.0",
    "django-stubs[compatible-mypy]>=5.1.3",
    "djangorestframework-stubs[compatible-mypy]>=3.15.3",
]

[tool.pdm]
version = { source = "file", path = "." }

[tool.ruff]
lint.extend-select = ["I"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = [
    "migrations",
    "tests",
    "tests.py",
    ".venv",
    "build",
		"fiction",
		"manage.py"
]
strict = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
	"django_extensions.*"
]


[tool.django-stubs]
django_settings_module = "fiction.settings"

[tool.pylint."MESSAGES CONTROL"]
disable="C0111,I0011,W0212,W0613,W0702,C0103,R0901"

[tool.pylint]
ignore = "tests.py, migrations, .venv, settings.py, manage.py"
